# schema_registry_converter

./: Cargo.toml  Makefile  rust-toolchain.toml  schema-registry-api.http
examples/rdkafka-kafka-avro-consumer/: Cargo.toml
examples/rdkafka-kafka-avro-consumer/src/: main.rs
examples/rdkafka-kafka-avro-producer/: Cargo.toml
examples/rdkafka-kafka-avro-producer/src/: main.rs
examples/rdkafka-kafka-json-consumer/: Cargo.toml
examples/rdkafka-kafka-json-consumer/src/: main.rs
examples/rdkafka-kafka-json-producer/: Cargo.toml
examples/rdkafka-kafka-json-producer/src/: main.rs
examples/rdkafka-kafka-protobuf-consumer/: Cargo.toml
examples/rdkafka-kafka-protobuf-producer/: Cargo.toml
examples/schema-registry-custom-client/: Cargo.toml
examples/schema-registry-custom-client/src/: main.rs
examples/schema-registry-register-subject/: Cargo.toml
examples/schema-registry-register-subject/src/: main.rs
schema-registry-client/: Cargo.toml
schema-registry-client/src/: config.rs  error.rs  lib.rs  types.rs
schema-registry-client/src/client/: cached.rs  mod.rs  test_util.rs  util.rs
schema-registry-client/tests/: register_schema.rs
schema-registry-client/tests/resources/: heartbeat_schema_response.json  heartbeat_subject_response.json
schema-registry-converter/: Cargo.toml
schema-registry-converter/src/: lib.rs
schema-registry-serde/: Cargo.toml
schema-registry-serde-avro/: Cargo.toml
schema-registry-serde-avro/src/: deserializer.rs  error.rs  lib.rs  serializer.rs
schema-registry-serde-json/: Cargo.toml
schema-registry-serde-json/src/: deserializer.rs  error.rs  lib.rs  serializer.rs
schema-registry-serde-protobuf/: Cargo.toml
schema-registry-serde-protobuf/src/: deserializer.rs  error.rs  lib.rs  serializer.rs
schema-registry-serde-protobuf/src/proto/: mod.rs  resolver.rs  types.rs
schema-registry-serde/src/: deserializer.rs  lib.rs  payload.rs  serializer.rs
tools/: schema-registry.http
tools/schemas/avro/: avro.account-created-key.avsc  avro.account-created-value.avsc  example.account-created-key.avsc  example.account-created.avsc
tools/schemas/avro/references/: user-id.avsc
tools/schemas/json/: json.account-created-key.json  json.account-created-value.json
tools/schemas/protobuf/: proto.account-created-key.proto  proto.account-created-value.proto
