[package]
name = "schema-registry-client"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "^1.0"
async-trait = "^0.1"
reqwest = { version = "^0.11", features = ["json"] }
base64 = "^0.21"
serde = { version = "^1.0", features = ["derive"] }
tracing = "^0.1"

[dev-dependencies]
factori = "1"